# 2040_Bone_Conduction_Headphones

./: .gitmodules  CMakeLists.txt  arm-none-eabi.cmake  main.c  memory.ld
application/: application.cmake
application/example1/: application.c  application.h
